# mmcif-db-tool

./: .gitignore  README.md  pyproject.toml
docs/: datatypes.txt
mmcif_db_tool/: cli.py  mmcif_dict.py  schema_map.py
tests/: test_mmcif_dict.py  test_schema_map.py
